// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display values 1 1`] = `
<div>
  <span>
    Here we go
  </span>
</div>
`;

exports[`should display values 2 1`] = `
<div>
  <span>
    Here we go again
  </span>
</div>
`;

exports[`should display values 3 1`] = `
<div>
  <span>
    Here we go again and again
  </span>
</div>
`;
